--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -23,7 +23,7 @@ body {
 		}
 		//content
 		.container-fluid {
-			padding: 2em 15px 3em;
+			padding: 0 15px 3em;
 			background-image: url(../img/bg-3.jpg);
 			background-size: cover;
 			background-attachment: fixed;
